--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-apexcharts": "^1.4.1",
     "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
+    "react-hook-form": "^7.45.4",
     "react-query": "^3.39.3",
     "react-router-dom": "^5.3.4",
     "react-scripts": "5.0.1",
